# Ex3cpp

./: CMakeLists.txt  main.cpp
Commands/: Command.cpp  Command.h  CreateCommand.h  Creators.h
Commands/CommandCreator/: IfCommand.cpp  IfCommand.h
Common/: Consts.cpp  Consts.h  EnvironmentVars.cpp  EnvironmentVars.h
Handlers/: Conditions.cpp  Conditions.h
Interpreter/: Interpreter.cpp  Interpreter.h
